--- a/movie_related/movie_related.Rmd
+++ b/movie_related/movie_related.Rmd
@@ -75,7 +75,7 @@ list(
   tar_target(query_tmpl_data, fs::path("sql", "data.tmpl.sql"), format = "file"),
   targets_data,
   tar_target(
-    questions, 
+    questions,
     tarflow.iquizoo::pickup(
       "
 SELECT *
@@ -99,8 +99,8 @@ FROM iquizoo_content_db.question_items
 list(
   tar_target(
     recordings,
-    data_parsed_ERT |> 
-      pluck("raw_parsed", 1, "detail") |> 
+    data_parsed_ERT |>
+      pluck("raw_parsed", 1, "detail") |>
       possibly(download_detail)(),
     format = "file",
     pattern = map(data_parsed_ERT)
@@ -124,38 +124,41 @@ tar_load(question_items)
 ```
 
 ```{r}
-movie_recollection <- users |> 
-  inner_join(data_parsed_ERT, by = "user_id") |> 
-  select(user_id, user_name, game_id, game_name, game_time, game_duration, raw_parsed) |> 
-  mutate(game_duration = game_duration / 60000) |> 
-  unnest(raw_parsed) 
+movie_recollection <- users |>
+  inner_join(data_parsed_ERT, by = "user_id") |>
+  select(
+    user_id, user_name, game_id, game_name, game_time, game_duration, 
+    raw_parsed
+  ) |>
+  mutate(game_duration = game_duration / 60000) |>
+  unnest(raw_parsed)
 writexl::write_xlsx(movie_recollection, "behav/movie_recollection.xlsx")
 ```
 
 ```{r}
-question_names <- questions |> 
-  select(Id, Name) |> 
+question_names <- questions |>
+  select(Id, Name) |>
   deframe()
-question_items_names <- question_items |> 
-  select(Id, ItemTitle) |> 
+question_items_names <- question_items |>
+  select(Id, ItemTitle) |>
   deframe()
-movie_reasoning <- users |> 
-  inner_join(data_parsed_PlotR, by = "user_id") |> 
-  unnest(raw_parsed) |> 
+movie_reasoning <- users |>
+  inner_join(data_parsed_PlotR, by = "user_id") |>
+  unnest(raw_parsed) |>
   select(
-    user_id, user_name, game_id, game_name, game_time, game_duration, 
+    user_id, user_name, game_id, game_name, game_time, game_duration,
     itemid, rt, resp, cresp, acc
-  ) |> 
-  mutate(game_duration = game_duration / 60000) |> 
+  ) |>
+  mutate(game_duration = game_duration / 60000) |>
   mutate(
-    question_name = question_names[as.character(itemid)] |> 
+    question_name = question_names[as.character(itemid)] |>
       map_chr(
-        ~ read_html(.) |> 
+        ~ read_html(.) |>
           html_text2()
       ),
     .after = itemid,
     .keep = "unused"
-  ) |> 
+  ) |>
   mutate(
     resp = if_else(
       cresp == "",
