--- a/movie_related/preprocessing.qmd
+++ b/movie_related/preprocessing.qmd
@@ -8,6 +8,7 @@ author: Liang Zhang
 #| include: false
 
 library(tidyverse)
+library(targets)
 library(rvest)
 requireNamespace("bit64")
 tar_load(users)
@@ -32,59 +33,58 @@ writexl::write_xlsx(movie_recollection, "behav/movie_recollection.xlsx")
 #| label: questionnaire
 
 # question info
-tar_load(questions)
-tar_load(question_items)
-question_names <- questions |>
-  select(Id, Name) |>
-  deframe()
-question_items_names <- question_items |>
-  select(Id, ItemTitle) |>
-  deframe()
+question_names <- tar_read(questions) |>
+  select(Id, Name)
+question_items_names <- tar_read(question_items) |>
+  select(Id, ItemTitle) |> 
+  filter(Id != 0)
 
-# reasoning on movie
-tar_load(data_parsed_PlotR)
-movie_reasoning <- users |>
-  inner_join(data_parsed_PlotR, by = "user_id") |>
-  filter(map_lgl(raw_parsed, ~ is.character(.$score))) |> 
-  unnest(raw_parsed) |>
+# include all the questionnaires
+questionnaires <- bind_rows(
+  tar_read(data_parsed_PlotR) |>
+    filter(map_lgl(raw_parsed, ~ is.character(.$score))),
+  tar_read(data_parsed_LNSQQ),
+  tar_read(data_parsed_LMSQQ),
+  tar_read(data_parsed_Sleepiness),
+  tar_read(data_parsed_SBQ),
+  tar_read(data_parsed_STQ)
+) |> 
+  tidytable::unnest(raw_parsed) |> 
+  separate_longer_delim(resp, ",") |> 
+  mutate(
+    item_id_typed = bit64::as.integer64(itemid),
+    resp_typed = bit64::as.integer64(resp)
+  ) |> 
+  left_join(
+    question_names, 
+    by = join_by(item_id_typed == Id)
+  ) |> 
+  left_join(
+    question_items_names,
+    by = join_by(resp_typed == Id)
+  ) |> 
+  mutate(
+    game_duration = game_duration / 60000,
+    question_name = str_extract(Name, "(?<=<p>).+(?=</p>)"),
+    resp_text = coalesce(ItemTitle, resp)
+  ) |> 
+  summarise(
+    resp_text = str_c(resp_text, collapse = ";"),
+    .by = c(user_id, game_time, game_duration, game_name, question_name, acc)
+  ) |> 
+  left_join(users, by = "user_id") |> 
+  mutate(user_sex = c("M", "F")[user_sex]) |> 
   select(
-    user_id, user_name, game_id, game_name, game_time, game_duration,
-    itemid, rt, resp, cresp, acc
-  ) |>
-  mutate(game_duration = game_duration / 60000) |>
-  mutate(
-    question_name = question_names[as.character(itemid)] |>
-      map_chr(
-        ~ read_html(.) |>
-          html_text2()
-      ),
-    .after = itemid,
-    .keep = "unused"
-  ) |>
-  mutate(
-    cresp = map_chr(
-      cresp,
-      ~ {
-        cresps <- str_split_1(., ",")
-        cresps <- cresps[cresps != ""]
-        str_c(question_items_names[cresps], collapse = ",")
-      }
-    ),
-    resp = map_chr(
-      resp,
-      ~ question_items_names[str_split_1(., ",")] |> 
-        str_c(collapse = ",")
-    ),
-    .keep = "unused"
+    user_name, user_sex, user_dob, game_time, game_duration,
+    game_name, question_name, resp_text, acc
   )
-writexl::write_xlsx(movie_reasoning, "behav/movie_reasoning.xlsx")
+writexl::write_xlsx(questionnaires, "behav/questionnaires.xlsx")
 ```
 
 ```{r}
 #| label: temp-order-judge
 
-tar_load(data_parsed_TMT)
-data_parsed_TMT |>
+tar_read(data_parsed_TMT) |>
   select(user_id, game_time, raw_parsed) |> 
   unnest(raw_parsed) |> 
   writexl::write_xlsx("behav/temporal_order.xlsx")
