Add invalidation for data fetching
Signed-off-by: Liang Zhang <psychelzh@outlook.com>

--- a/movie_related/movie_related.Rmd
+++ b/movie_related/movie_related.Rmd
@@ -103,5 +103,6 @@ list(
 ```
 
 ```{r run-pipeline, include=FALSE}
+# tar_invalidate(c(starts_with("data"), users))
 tar_make_future(workers = 8)
 ```
